--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
       <!-- dynamically add pagination links here -->
 
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/script1.js"></script>
   </body>
 </html>
 
